# Hyperliquid-Outcome-Market-Making-Bot-5-4-2026

./: .env.example  .gitignore  Cargo.toml  README.md
config/: default.toml
crates/bot/: Cargo.toml
crates/bot/src/: config_io.rs  main.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: common.rs  lib.rs
crates/connectors/src/hyperliquid/: client.rs  mod.rs  outcome.rs  signing.rs  types.rs  ws.rs
crates/connectors/src/kalshi/: client.rs  mod.rs  ws.rs
crates/connectors/src/polymarket/: client.rs  mod.rs  ws.rs
crates/core/: Cargo.toml
crates/core/src/: book.rs  ids.rs  instrument.rs  lib.rs  metrics.rs  order.rs  position.rs  price.rs  time.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: avellaneda.rs  btc_parity.rs  common.rs  kelly.rs  lib.rs  xvenue_arb.rs
dashboard/static/: app.js  index.html  style.css
docs/diagrams/: live_snapshots.json
scripts/: animate.py  render_plots.py  scrape_live.py
