[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/connectors",
    "crates/strategies",
    "crates/risk",
    "crates/dashboard",
    "crates/bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/gelatotrade/hyperliquid-outcome-market-making-bot-"

[workspace.dependencies]
# Async runtime - Tokio is the de-facto standard for low-latency networking in Rust.
tokio = { version = "1.39", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures = "0.3"
futures-util = "0.3"

# HTTP / TLS
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
url = "2"
hyper = { version = "1", features = ["full"] }

# Web server / dashboard
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rmp-serde = "1"

# Crypto / signing
ethers = { version = "2", default-features = false, features = ["rustls"] }
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"

# Numerics
rust_decimal = { version = "1", features = ["serde-with-float", "maths"] }
rust_decimal_macros = "1"
ordered-float = { version = "4", features = ["serde"] }
statrs = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency utilities
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1"

# Lock-free queues for the hot path
ringbuf = "0.4"

# Logging / metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Errors
anyhow = "1"
thiserror = "1"

# Config
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"

# Misc
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

[profile.release]
# Hot path is in release; tune for the tightest possible loop.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"

[profile.release.package."*"]
opt-level = 3

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
