[package]
name = "hl-omm-bot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hl-omm-bot"
path = "src/main.rs"

[dependencies]
hl-omm-core = { path = "../core" }
hl-omm-connectors = { path = "../connectors" }
hl-omm-strategies = { path = "../strategies" }
hl-omm-risk = { path = "../risk" }
hl-omm-dashboard = { path = "../dashboard" }

tokio = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }

rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }

parking_lot = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
