[package]
name = "hl-omm-dashboard"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hl-omm-core = { path = "../core" }
hl-omm-risk = { path = "../risk" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

rust_decimal = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }

metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
