[package]
name = "hl-omm-risk"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hl-omm-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
