[package]
name = "hl-omm-strategies"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hl-omm-core = { path = "../core" }
hl-omm-connectors = { path = "../connectors" }
hl-omm-risk = { path = "../risk" }

tokio = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
ordered-float = { workspace = true }
statrs = { workspace = true }
chrono = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
